name:           math-functions-bench
version:        0.3.0.0
cabal-version:  >= 1.10
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>,
                Aleksey Khudyakov <alexey.skladnoy@gmail.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
homepage:       https://github.com/bos/math-functions
bug-reports:    https://github.com/bos/math-functions/issues
category:       Math, Numeric
build-type:     Simple
synopsis:       Benchmarks for math-functions package

extra-source-files:
        
executable math-functions-bench
  default-language: Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DeriveDataTypeable
    FlexibleContexts
    MultiParamTypeClasses
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    DeriveGeneric
  ghc-options:          -Wall -O2
  hs-source-dirs:       bench
  Main-is:              bench.hs
  build-depends:        base                >= 4.5 && < 5
                      , math-functions
                      , data-default-class
                      , vector
                      , criterion
